--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "http-proxy-middleware": "^2.0.6",
+    "i18next": "^23.10.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-shimmer": "^3.2.0",
@@ -29,6 +31,9 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "less": "^4.2.0",
+    "sass": "^1.72.0",
+    "stylus": "^0.63.0",
     "vite": "^5.1.6"
   }
 }
